tests/ui/pin-ergonomics/pattern-matching.pin_ergonomics.stderr
error[E0308]: mismatched types
  --> $DIR/pattern-matching.rs:115:6
   |
LL |     (&mut x,): Pin<&'a mut &'a mut (Foo<T, U>,)>,
   |      ^^^^^^    --------------------------------- expected due to this
   |      |
   |      expected `Foo<T, U>`, found `&mut _`
   |
   = note:         expected struct `Foo<T, U>`
           found mutable reference `&mut _`
note: to declare a mutable binding use: `mut x`
  --> $DIR/pattern-matching.rs:115:6
   |
LL |     (&mut x,): Pin<&'a mut &'a mut (Foo<T, U>,)>,
   |      ^^^^^^
help: consider removing `&mut` from the pattern
   |
LL -     (&mut x,): Pin<&'a mut &'a mut (Foo<T, U>,)>,
LL +     (x,): Pin<&'a mut &'a mut (Foo<T, U>,)>,
   |

error[E0308]: mismatched types
  --> $DIR/pattern-matching.rs:121:5
   |
LL |     &mut (x,): Pin<&'a mut (&'a mut Foo<T, U>,)>,
   |     ^^^^^^^^^  --------------------------------- expected due to this
   |     |
   |     expected `Pin<&mut (&mut Foo<T, U>,)>`, found `&mut _`
   |
   = note:         expected struct `Pin<&'a mut (&'a mut Foo<T, U>,)>`
           found mutable reference `&mut _`
help: you might have meant to use field `pointer` whose type is `&'a mut (&'a mut Foo<T, U>,)`
   |
LL |     &mut (x,): Pin<&'a mut (&'a mut Foo<T, U>,)>.pointer,
   |                                                 ++++++++

error[E0308]: mismatched types
  --> $DIR/pattern-matching.rs:127:5
   |
LL |     &mut (x,): Pin<&'a mut &'a mut (Foo<T, U>,)>,
   |     ^^^^^^^^^  --------------------------------- expected due to this
   |     |
   |     expected `Pin<&mut &mut (Foo<T, U>,)>`, found `&mut _`
   |
   = note:         expected struct `Pin<&'a mut &'a mut (Foo<T, U>,)>`
           found mutable reference `&mut _`
help: you might have meant to use field `pointer` whose type is `&'a mut &'a mut (Foo<T, U>,)`
   |
LL |     &mut (x,): Pin<&'a mut &'a mut (Foo<T, U>,)>.pointer,
   |                                                 ++++++++

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
